# libcommons

./: .gitignore  Cargo.toml  LICENSE  README.md
include/: libcommons-stdio.h  libcommons.h
src/: ffi.rs  fs.rs  io.rs  iter.rs  lib.rs  matrix.rs  str.rs  util.rs
src/ffi/: str.rs
src/os/: unix.rs  windows.rs
src/os/unix/: dirs.rs  lock.rs
src/os/windows/: dirs.rs
src/str/: stack.rs  utf8.rs
tests/: ctests.rs  str.c
