[package]
name = "libcommons"
description = "A bunch of things I don't want to write again"
version = "0.6.0"
edition = "2024"

[features]
default = []
full = ["str", "dirs", "extra_traits", "io", "result", "iter", "ffi"]
str = []
dirs = []
extra_traits = []
io = []
result = []
iter = []
ffi = []
matrix = ["nightly"]
nightly = []
