[package]
name = "libcommons"
description = "A bunch of things I don't want to write again"
version = "0.7.0"
edition = "2024"
readme = false
repository = "https://github.com/5GameMaker/libcommons"
license = "MIT"
keywords = ["common", "ffi"]
categories = ["development-tools::ffi"]

[features]
default = []
full = ["str", "dirs", "extra_traits", "io", "result", "iter", "ffi"]
str = []
dirs = []
extra_traits = []
io = []
result = []
iter = []
ffi = []
matrix = ["nightly"]
nightly = []
